infra/manifests/listmonk/statefulset-postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: listmonk-postgres
spec:
  selector:
    matchLabels:
      app: listmonk-postgres
  serviceName: listmonk-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: listmonk-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest  # Overridden
        ports:
        - containerPort: 5432
          name: pgport
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
