infra/manifests/listmonk/service-listmonk.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: listmonk-listmonk
spec:
  selector:
    app: listmonk-listmonk
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
