infra/manifests/listmonk/service-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: listmonk-postgres
spec:
  clusterIP: None
  selector:
    app: listmonk-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
