infra/manifests/listmonk/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: listmonk
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 8443
    protocol: HTTPS
    hostname: listmonk.techwerkers.nl
    tls:
      mode: Terminate
      certificateRefs:
      - name: listmonk-tls
        namespace: listmonk
